<resources>
    <string name="app_name">InstagramClone</string>
    <string name="userName">thiennhan</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="instagram_text_logo">Instagram Text Logo</string>
    <string name="newPost">New Post</string>
    <string name="addPost">Share</string>
    <string name="caption_hint">Write a caption...</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="explore">Explore</string>
    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="user_name">thiennhan</string>
    <string name="post_image">Post Image</string>
    <string name="post_caption">Post Caption</string>
    <string name="title_activity_post_details">PostDetailsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="date">Monday</string>
    <string name="likeCount">5 likes</string>
</resources>