<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_instagram_home_filled_24"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_intagram_search"
        android:title="@string/explore"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/reels"
        android:enabled="true"
        android:icon="@drawable/ic_instagram_reels"
        android:title="@string/reels"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/ic_instagram_heart"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/userProfile"
        android:enabled="true"
        android:icon="@drawable/ic_instagram_user_outline_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>
</menu>