<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/profile_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/user_name"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toTopOf="@id/ivProfileImage"
        app:layout_constraintBottom_toBottomOf="@id/ivProfileImage"/>

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/post_image"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ivProfileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tvPostCaption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_caption"
        app:layout_constraintTop_toBottomOf="@id/tvLikeCount"
        app:layout_constraintStart_toStartOf="@id/tvLikeCount"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <ImageButton
        android:id="@+id/ibLike"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/ic_instagram_heart"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/ivPostImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:background="@android:color/transparent"
        android:tint="#fff"/>

    <ImageButton
        android:id="@+id/ibComment"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/ic_instagram_comment"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/ivPostImage"

        app:layout_constraintStart_toEndOf="@id/ibLike"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/transparent"
        android:tint="#fff"/>
    <TextView
        android:id="@+id/tvLikeCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/likeCount"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ibLike"
        app:layout_constraintStart_toStartOf="@id/ibLike"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />


    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvPostCaption"
        app:layout_constraintStart_toStartOf="@id/ibLike"
        app:layout_constraintEnd_toEndOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>